Bug 167168 - Timeline view shows redundant extra sections
Summary: Timeline view shows redundant extra sections
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Searches-TimeLine (other bugs)
Version First Reported In: 0.10.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-21 20:54 UTC by Gandalf Lechner
Modified: 2019-12-27 22:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 7.0.0
Sentry Crash Report:


Attachments
screenshot (63.45 KB, image/jpeg)
2008-07-21 20:55 UTC, Gandalf Lechner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gandalf Lechner 2008-07-21 20:54:44 UTC
Version:           0.10-svn (using KDE 4.0.98)
Installed from:    Ubuntu Packages
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.24-17-generic

The timeline view is structured in sections according to the albums containing images which match the selected time range. In many situations (but not always), the timeline view includes an extra section entitled "My Albums/", whereas the regular sections have names like "My Albums/Name of the album". In this extra section, thumbnails are not visible, whereas thumbnails work fine in the regular albums. Instead of the thumbnails, the default jpg/raw icon is displayed, or blank screen, or both (see screenshot). 
The extra sections seem to be redundant, i.e. include only pictures which are displayed in the regular albums anyhow.

I encountered this bug in the year and month view regularly, but have not been able to reproduce it in the day view. Moreover, the week view seems to be broken, i.e. the histogram widget does not show any pictures although it does so in the other views.
Comment 1 Gandalf Lechner 2008-07-21 20:55:32 UTC
Created attachment 26311 [details]
screenshot
Comment 2 Andi Clemens 2008-07-21 23:01:20 UTC
I don't think this has something to do with the time line at all, I can also see this when moving a folder inside of digikam, rebuilding the image fingerprints and searching for similar or duplicate images.
Moving folders doesn't work well, it seems to corrupt the database all the time... so this might be the issue...
Comment 3 Marcel Wiesweg 2008-07-22 18:56:28 UTC
I can explain this issue. When a file is detected as removed, not all information is directly removed from the database, but the entry is set to the status Removed. Only later (functionality currently seemingly broken) is the entry removed. The idea is that a file may later reappear and then tags are not lost.

This change required to add the condition status==Visible to a listing functions, as I became aware only recently. Most places have been fixed, but search has still a problem, and some others.
This means what you see here are ghost images that were moved or deleted.
Comment 4 Marcel Wiesweg 2008-07-22 18:59:44 UTC
SVN commit 836631 by mwiesweg:

Add missing status check in a few more places.

BUG: 167168


 M  +10 -4     albumdb.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=836631
Comment 5 caulier.gilles 2019-12-27 22:51:20 UTC
Not reproducible with 7.0.0-beta1