Add missing status check in a few more places.

BUG: 167168

svn path=/trunk/extragear/graphics/digikam/; revision=836631